--- a/style.html
+++ b/style.html
@@ -1,13 +1,11 @@
 <html>
 <head>
-	<title> Using Background styles</title>
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<title>using CSS in HTML</title> 
+	<link href="style.css" rel="stylesheet" type="text/css" >
 </head>
 <body>
-<p id="para1"> This is Paragraph1 </p>
-<p id="para2"> This is Paragraph2 </p>
-<p id="para3"> This is Paragraph3 </p>
-  
-</body>
+	this is a webpage formatted using css
 
+<p>this 
+</body>
 </html>
